added button new score

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
         </div>
       </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dice" />
+      <img src="dice-5.png" alt="Playing dice" class="dice" id="dice-1" />
+      <img src="dice-5.png" alt="Playing dice" class="dice" id="dice-2"/>
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
+      <input type="text" class="btn input-win-score" placeholder="WIN SCORE"/>
+      <button class="btn btn--win-score">👾 Set win score</button>
     </main>
     <script src="script.js"></script>
   </body>
